--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 	<head>
 
-		<title>Starbuzz Coffee</title>
+		<title>Momo Collection</title>
 
 		<style>
 
 		body{
 
-			background-color: #d2b48d;
+			background-color: #d30e45;
 
 			margin-left: 20%;
 
@@ -30,33 +30,18 @@
 
 	<body>
 
-		<h1>Welcome to Starbuzz Coffee</h1>
+		<h1>Welcome to the Momo Collection!</h1>
 
 		
 
 
 
-		<h2>House Blend, $1.49</h2>
+		<h2></h2>
 
-		<p>A smooth, mild blend of coffees from Mexico, Bolivia and Guatemala.</p>
-
-
-
-		<h2>Mocha Cafe Latte, $2.35</h2>
-
-		<p>Espresso, steamed milk and chocolate syrup.</p>
+		<p></p>
 
 
 
-		<h2>Cappuccino, $1.89</h2>
-
-		<p>A mixture of espresso, steamed milk and foam.</p>
-
-
-
-		<h2>Chai Tea, $1.85</h2>
-
-		<p>A spicy drink made with black tea, spices, milk and honey.</p>
 
 	</body>
 
