--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ New cat owners often time overfeed their cats as they do not know how to turn th
       <p>
         Just like any member of the family, a cat needs regular medical visits. Unlike human children, cats can't let us know when they're not feeling well. They rely on their humans to take them to a veterinarian for regular medical examinations to keep them healthy. As cats often times show no signs of being unwell, it extremely important that a cat sees a vet at least once a year, for a physical check-up: teeth, ears, eyes, heart, booster vaccinations, and deflea/deworm treatments. All cat owners should consider getting their pet vaccinated against the following: feline infectious enteritis (FIE), cat ‘flu and feline leukemia virus (FeLV). All can kill cats if they become infected and so it is important to protect your pet. You may also find that a cattery will not accept your pet, should you need their services, without proof of these and potentially other vaccinations. Your vet can advise exactly what vaccinations are required for your pet. If you are at all concerned about your cat’s health or behaviour you should see your vet as soon as possible.</p>
       
-      <h2 id="health">Hygiene</h2>
+      <h2 id="health">Health</h2>
       <p>Furthermore, your cats hygiene is also very important for their health. Get the cat used to tooth brushing. Cats can and do suffer from dental disease. To brush your cat's teeth, you need a soft-bristled toothbrush and veterinary toothpaste. Never use human toothpaste — too much fluoride can upset your cat's stomach, and with the high fluoride concentration in human toothpaste, too much could be toxic. Start by offering him/her a taste of the veterinary toothpaste. The next time, let him/her taste the toothpaste, and then run your finger along the gums of the upper teeth. Repeat the process with the toothbrush. Get the bristles of the brush along the gum line of the upper back teeth and angle slightly up, so the bristles get under the gum line. Work from back to front, making small circles along the gum lines. It should take you less than 30 seconds to brush your pet's teeth. </p>
       <ul>
         <li>Do not try to brush the entire mouth at first. If he/she only lets you brush the outside of her upper teeth, it's better than nothing. You're still addressing the most important area of dental disease prevention.</li>
@@ -94,7 +94,6 @@ New cat owners often time overfeed their cats as they do not know how to turn th
 </section>
 
 <footer>
-  <p></p>
 </footer>
 
 </body>
