--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section> 
   <article>
     
-    <img id="catcenter" src="https://i.postimg.cc/s2Pf8N3W/momo1.jpg" alt="cat">
+    <img id="catcenter" src="https://i.postimg.cc/fTwwtKjW/momo1.jpg" alt="cat">
     
     <div id="cattips">
     <h2 id="feed">Feeding</h2> 
